src/test/deca/syntax/invalid/includeFile-withInstruction.decah
int bedrooms = 3;
print(bedrooms);